# movieViewer

./: Cargo.toml
src/: config.rs  main.rs
