[package]
name = "movieViewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.10.0", features = ["image", "debug", "tokio"] }
iced_aw = { version = "0.6.0", default-features = false, features = ["card"] }
native-dialog = "0.6.4"
reqwest = "0.11.19"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
walkdir = "2.3.3"
